feat: start do header

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
   <title>Главная</title>
 </head>
 <body>
-  @@include('components/_header.html')
+  @@include('layout/_header.html')
   <main>
     
   </main>
-  @@include('components/_footer.html')
+  @@include('layout/_footer.html')
   <!-- <script src="js/script.min.js"></script> -->
 </body>
 </html>
