feat: finish introdution and use sections

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div class="content">
       @@include("components/_header.html")
       <main class="main">
-        <div class="white">
+        <div class="light">
           <section class="introduction">
             <img class="introduction__img introduction__img-4" src="assets/img/laead_block_blue.png" alt="image">
             <img class="introduction__img introduction__img-3" src="assets/img/lead_block.png" alt="">
@@ -31,43 +31,25 @@
               <h3 class="use__title title">Где можно применить Lean</h3>
               <div class="use__body">
                 <div class="use__flex">
-                  <div class="use__column">
-                    <a data-goto=".sales" href="#" class="use__item item">
-                      <div data-goto=".sales" class="item__flex">
-                        <div class="item__img-wrap">
-                          <img data-goto=".sales" src="assets/img/use.png" width="120px" alt="" class="item__img">
-                        </div>
-                        <p data-goto=".sales" class="item__text">Lean в продажах</p>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="use__column">
-                    <a data-goto=".finance" href="#" class="use__item item">
-                      <div data-goto=".finance"  class="item__flex">
-                        <div class="item__img-wrap">
-                          <img data-goto=".finance"  src="assets/img/use-1.png" width="120px" alt="" class="item__img">
-                        </div>
-                        <p data-goto=".finance"  class="item__text">Lean в финансах</p>
-                      </div>
-                    </a>
-                  </div>
-                  <div class="use__column">
-                    <a data-goto=".it" href="#" class="use__item item">
-                      <div data-goto=".it"  class="item__flex">
-                        <div class="item__img-wrap">
-                          <img data-goto=".it"  src="assets/img/use-2.png" width="125px" alt="" class="item__img">
-                        </div>
-                        <p data-goto=".it"  class="item__text">Lean в IT</p>
-                      </div>
-                    </a>
-                  </div>
+                  <a data-goto=".sales" href="#" class="use__item item">
+                    <img data-goto=".sales" src="assets/img/use.png" alt="" class="item__img">
+                    <span data-goto=".sales" class="item__text">Lean в продажах</span>
+                  </a>
+                  <a data-goto=".finance" href="#" class="use__item item">
+                    <img data-goto=".finance"  src="assets/img/use-1.png" alt="" class="item__img">
+                    <span data-goto=".finance"  class="item__text">Lean в финансах</span>
+                  </a>
+                  <a data-goto=".it" href="#" class="use__item item">
+                    <img data-goto=".it"  src="assets/img/use-2.png" alt="" class="item__img">
+                    <span data-goto=".it"  class="item__text">Lean в IT</span>
+                  </a>
                 </div>
               </div>
             </div>
           </section>
-          <img src="assets/img/use_arrow.jpg" alt="img">
+          <img class="use-arrow" src="assets/img/use_arrow.jpg" alt="img">
         </div>
-        <div class="blue blue-indent">
+        <div class="colored blue-indent">
           <section class="sales">
             <div class="content-narrow">
               <div class="sales__flex">
@@ -99,7 +81,7 @@
           </section>
           @@include("components/_start.html")
         </div>
-        <div class="white white-finance">
+        <div class="light white-finance">
           <div class="arrow-down-blue">
             <div class="arrow-up-small">
               <img src="assets/img/arrow_up.png" alt="" class="arrow-up-small__img">
@@ -139,7 +121,7 @@
             </div>
           </aside>
         </div>
-        <div class="blue">
+        <div class="colored">
           <div class="arrow-down-white white-arrow-finance">
             <div class="arrow-up-finance">
               <img src="assets/img/arrow_up.png" alt="" class="arrow-up-finance__img">
