feat: finish button up

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,10 @@
         </div>
         <div class="light indent-finance">
           <div class="sales-arrow">
-            <a class="sales-arrow__button button-up" href=""></a>
+            <a class="sales-arrow__button button-up" href="">
+              <span class="button-up__part-1"></span>
+              <span class="button-up__part-2"></span>
+            </a>
           </div>
           <section class="finance">
             <div class="content-narrow">
