fix: add deleted footer

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,9 @@
               </div>
             </div>
           </section>
-          @@include("components/_start.html")
+          <div class="content-for-start">
+            @@include("components/_start.html")
+          </div>
           <div class="arrow-up-footer">
             <div class="content-narrow">
               <div class="arrow-up-footer__img-wrap">
@@ -165,9 +167,7 @@
         </div>
       </main>
     </div>
-    <div class="content-for-start">
-      @@include("components/_start.html")
-    </div>
+    @@include("components/_footer.html")
   </div>
   <script src="js/script.min.js"></script>
 </body>
