feat: add buttons up

--- a/src/index.html
+++ b/src/index.html
@@ -83,20 +83,18 @@
             </a>
           </div>
           <section class="finance">
-            <div class="content-narrow">
+            <div class="content-without-breakpoint">
               <div class="finance__flex">
                 <div class="finance__body">
-                  <div class="finance__body-flex">
-                    <h3 class="finance__title title">Lean в финансах</h3>
-                    <p class="finance__text">В управлении финансами ситсема позволяет более точно оценить влияние Lean-трансформации на стратегические показатели компании через использование альтернативных методов управленческого учета.  </p>
-                    <div class="finance__list list-fnnc">
-                      <h4 class="list-fnnc__list-title">Lean учёт это:</h4>
-                      <ul class="list-fnnc__list">
-                        <li class="list-fnnc__item">Оценка результативности внедрения лин</li>
-                        <li class="list-fnnc__item">Оценка внедряемых изменений</li>
-                        <li class="list-fnnc__item">"Бережливый офис"</li>
-                      </ul>
-                    </div>
+                  <h3 class="finance__title title">Lean в финансах</h3>
+                  <p class="finance__text">В управлении финансами ситсема позволяет более точно оценить влияние Lean-трансформации на стратегические показатели компании через использование альтернативных методов управленческого учета.  </p>
+                  <div class="finance__list list-fnnc">
+                    <h4 class="list-fnnc__list-title">Lean учёт это:</h4>
+                    <ul class="list-fnnc__list">
+                      <li class="list-fnnc__item">Оценка результативности внедрения лин</li>
+                      <li class="list-fnnc__item">Оценка внедряемых изменений</li>
+                      <li class="list-fnnc__item">"Бережливый офис"</li>
+                    </ul>
                   </div>
                 </div>
                 <div class="finance__img-wrap">
@@ -115,13 +113,12 @@
               </div>
             </div>
           </aside>
+          <a class="button-up" href="">
+            <span class="button-up__part-1"></span>
+            <span class="button-up__part-2"></span>
+          </a>
         </div>
         <div class="colored">
-          <div class="arrow-down-white white-arrow-finance">
-            <div class="arrow-up-finance">
-              <img src="assets/img/arrow_up.png" alt="" class="arrow-up-finance__img">
-            </div>
-          </div>
           <section class="it">
             <div class="content-narrow">
               <div class="it__flex-column">
@@ -157,13 +154,10 @@
           <div class="content-for-start">
             @@include("components/_start.html")
           </div>
-          <div class="arrow-up-footer">
-            <div class="content-narrow">
-              <div class="arrow-up-footer__img-wrap">
-                <img src="assets/img/arrow_up.png" alt="" class="arrow-up-footer__img">
-              </div>
-            </div>
-          </div>
+          <a class="button-up" href="">
+            <span class="button-up__part-1"></span>
+            <span class="button-up__part-2"></span>
+          </a>
         </div>
       </main>
     </div>
