feat: change fonts and backgrounds according to new variables

--- a/src/index.html
+++ b/src/index.html
@@ -31,17 +31,17 @@
               <h3 class="use__title title">Где можно применить Lean</h3>
               <div class="use__body">
                 <div class="use__flex">
-                  <a data-goto=".sales" href="#" class="use__item item">
-                    <img data-goto=".sales" src="assets/img/use.png" alt="" class="item__img">
-                    <span data-goto=".sales" class="item__text">Lean в продажах</span>
+                  <a data-goto=".sales" href="#" class="use__item use-item">
+                    <img class="use-item__img" data-goto=".sales" src="assets/img/use.png" alt="" >
+                    <span  class="use-item__text links-font"data-goto=".sales">Lean в продажах</span>
                   </a>
-                  <a data-goto=".finance" href="#" class="use__item item">
-                    <img data-goto=".finance"  src="assets/img/use-1.png" alt="" class="item__img">
-                    <span data-goto=".finance"  class="item__text">Lean в финансах</span>
+                  <a data-goto=".finance" href="#" class="use__item use-item">
+                    <img class="use-item__img" data-goto=".finance"  src="assets/img/use-1.png" alt="">
+                    <span class="use-item__text links-font" data-goto=".finance">Lean в финансах</span>
                   </a>
-                  <a data-goto=".it" href="#" class="use__item item">
-                    <img data-goto=".it"  src="assets/img/use-2.png" alt="" class="item__img">
-                    <span data-goto=".it"  class="item__text">Lean в IT</span>
+                  <a data-goto=".it" href="#" class="use__item use-item">
+                    <img class="use-item__img" data-goto=".it"  src="assets/img/use-2.png" alt="">
+                    <span class="use-item__text links-font" data-goto=".it">Lean в IT</span>
                   </a>
                 </div>
               </div>
@@ -88,37 +88,35 @@
                 <div class="finance__body">
                   <h3 class="finance__title title">Lean в финансах</h3>
                   <p class="finance__text">В управлении финансами ситсема позволяет более точно оценить влияние Lean-трансформации на стратегические показатели компании через использование альтернативных методов управленческого учета.  </p>
-                  <div class="finance__list list-fnnc">
-                    <h4 class="list-fnnc__list-title">Lean учёт это:</h4>
-                    <ul class="list-fnnc__list">
-                      <li class="list-fnnc__item">Оценка результативности внедрения лин</li>
-                      <li class="list-fnnc__item">Оценка внедряемых изменений</li>
-                      <li class="list-fnnc__item">"Бережливый офис"</li>
-                    </ul>
+                  <h4 class="finance__list-title">Lean учёт это:</h4>
+                  <ul class="finance__list finance-list">
+                    <li class="finance-list__item">Оценка результативности внедрения лин</li>
+                    <li class="finance-list__item">Оценка внедряемых изменений</li>
+                    <li class="finance-list__item">"Бережливый офис"</li>
+                  </ul>
+                </div>
+                <div class="finance__img"></div>
+              </div>
+              <aside class="discuss">
+                <div class="content-width">
+                  <div class="discuss__flex">
+                    <div class="discuss__text">
+                      Мы можем дать оценку ситуации именно по вашему случаю. Чтобы получить ответы на ваши вопросы переходите на страницу контактов (можно перейти нажав на конпку ниже) и свяжитесь с нами наиболее удобным для вас способом:
+                    </div>
+                    <a href="" class="discuss__link button-yellow">Обсудить ваш вопрос</a>
                   </div>
                 </div>
-                <div class="finance__img-wrap">
-                  <img src="assets/img/Lean_in_finance.png" alt="" class="finance__img">
-                </div>
-              </div>
+              </aside>
             </div>
           </section>
-          <aside class="discuss">
-            <div class="content-width">
-              <div class="discuss__flex">
-                <div class="discuss__text">
-                  Мы можем дать оценку ситуации именно по вашему случаю. Чтобы получить ответы на ваши вопросы переходите на страницу контактов (можно перейти нажав на конпку ниже) и свяжитесь с нами наиболее удобным для вас способом:
-                </div>
-                <a href="" class="discuss__link button-yellow">Обсудить ваш вопрос</a>
-              </div>
-            </div>
-          </aside>
-          <a class="button-up" href="">
-            <span class="button-up__part-1"></span>
-            <span class="button-up__part-2"></span>
-          </a>
         </div>
         <div class="colored">
+          <div class="finance-arrow">
+            <a class="finance-arrow__button button-up" href="">
+              <span class="button-up__part-1"></span>
+              <span class="button-up__part-2"></span>
+            </a>
+          </div>
           <section class="it">
             <div class="content-narrow">
               <div class="it__flex-column">
