feat: add style to main font for index page

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <div class="content-narrow">
               <div class="introduction__flex">
                 <h2 class="introduction__title">Lean-трансформация <span>Вашего бизнеса.</span> Мы знаем как</h2>
-                <p class="introduction__text">Узнайте как получить до 90% компенсации стоимости затрат на консалтинговый проект</p>
+                <p class="introduction__text main-text">Узнайте как получить до 90% компенсации стоимости затрат на консалтинговый проект</p>
                 <a class="introduction__link button-yellow" href="small_business_consultation.html">Посмотреть условия</a>
               </div>
             </div>
@@ -55,7 +55,7 @@
               <div class="sales__flex">
                 <div class="sales__body">
                   <h3 class="sales__title title">Lean в продажах</h3>
-                  <p class="sales__text">Внедрение бережливого производства приводит к достижению впечатляющих результатов в отношении основых показателей продаж. <strong>Благодаря внедрению системы LEAN вы сможете:</strong></p>
+                  <p class="sales__text main-text">Внедрение бережливого производства приводит к достижению впечатляющих результатов в отношении основых показателей продаж. <strong>Благодаря внедрению системы LEAN вы сможете:</strong></p>
                   <ul class="sales__list">
                     <li class="sales__item">Сократить время закрытия сделки</li>
                     <li class="sales__item">Обслуживать больше клиентов за меньшее время</li>
@@ -87,7 +87,7 @@
               <div class="finance__flex">
                 <div class="finance__body">
                   <h3 class="finance__title title">Lean в финансах</h3>
-                  <p class="finance__text">В управлении финансами ситсема позволяет более точно оценить влияние Lean-трансформации на стратегические показатели компании через использование альтернативных методов управленческого учета.  </p>
+                  <p class="finance__text main-text">В управлении финансами ситсема позволяет более точно оценить влияние Lean-трансформации на стратегические показатели компании через использование альтернативных методов управленческого учета.  </p>
                   <h4 class="finance__list-title">Lean учёт это:</h4>
                   <ul class="finance__list finance-list">
                     <li class="finance-list__item">Оценка результативности внедрения лин</li>
@@ -100,7 +100,7 @@
               <aside class="discuss">
                 <div class="content-width">
                   <div class="discuss__flex">
-                    <div class="discuss__text">
+                    <div class="discuss__text main-text">
                       Мы можем дать оценку ситуации именно по вашему случаю. Чтобы получить ответы на ваши вопросы переходите на страницу контактов (можно перейти нажав на конпку ниже) и свяжитесь с нами наиболее удобным для вас способом:
                     </div>
                     <a href="" class="discuss__link button-yellow">Обсудить ваш вопрос</a>
@@ -125,7 +125,7 @@
                   <div class="it__body">
                     <div class="it__body-flex">
                       <h3 class="it__title title">Lean в IT</h3>
-                      <div class="it__text">На пути к Индустрии 4.0 для компании важно чтобы внедрение изменений осуществлялось слаженно и системно, усилия координировались,<br> а результаты были и соответствовали ожиданиям. </div>
+                      <div class="it__text main-text">На пути к Индустрии 4.0 для компании важно чтобы внедрение изменений осуществлялось слаженно и системно, усилия координировались,<br> а результаты были и соответствовали ожиданиям. </div>
                       <div class="it__list list-it">
                         <h4 class="list-it__title">Почему Lean-трансформацию компании стоит начать с<br> ИТ-департамента?</h4>
                         <ul class="list-it__list">
