fix: fix button yellow

--- a/src/index.html
+++ b/src/index.html
@@ -33,15 +33,15 @@
                 <div class="use__flex">
                   <a data-goto=".sales" href="#" class="use__item use-item">
                     <img class="use-item__img" data-goto=".sales" src="assets/img/use.png" alt="" >
-                    <span  class="use-item__text links-font"data-goto=".sales">Lean в продажах</span>
+                    <span  class="use-item__text"data-goto=".sales">Lean в продажах</span>
                   </a>
                   <a data-goto=".finance" href="#" class="use__item use-item">
                     <img class="use-item__img" data-goto=".finance"  src="assets/img/use-1.png" alt="">
-                    <span class="use-item__text links-font" data-goto=".finance">Lean в финансах</span>
+                    <span class="use-item__text" data-goto=".finance">Lean в финансах</span>
                   </a>
                   <a data-goto=".it" href="#" class="use__item use-item">
                     <img class="use-item__img" data-goto=".it"  src="assets/img/use-2.png" alt="">
-                    <span class="use-item__text links-font" data-goto=".it">Lean в IT</span>
+                    <span class="use-item__text" data-goto=".it">Lean в IT</span>
                   </a>
                 </div>
               </div>
