--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
           </div>
         </section>
         <section class="sales">
+          <div class="sales-arrow"></div>
           <div class="content-without-breakpoint">
             <div class="sales__flex">
               <div class="sales__body">
@@ -70,14 +71,14 @@
             @@include("components/_start.html")
           </div>
         </section>
-        <div class="sales-arrow">
-          <a class="sales-arrow__button button-up" href="">
-            <span class="button-up__part-1"></span>
-            <span class="button-up__part-2"></span>
-          </a>
-        </div>
         <section class="finance">
           <div class="content-without-breakpoint">
+            <!-- <div class="finance-arrow">
+              <a class="finance-arrow__button button-up" href="">
+                <span class="button-up__part-1"></span>
+                <span class="button-up__part-2"></span>
+              </a>
+            </div> -->
             <div class="finance__flex">
               <div class="finance__body">
                 <h3 class="finance__title section-title">Lean в финансах</h3>
@@ -103,13 +104,13 @@
             </aside>
           </div>
         </section>
-        <div class="finance-arrow">
-          <a class="finance-arrow__button button-up" href="">
-            <span class="button-up__part-1"></span>
-            <span class="button-up__part-2"></span>
-          </a>
-        </div>
         <section class="it">
+          <div class="it-arrow">
+            <a class="it-arrow__button button-up" href="">
+              <span class="button-up__part-1"></span>
+              <span class="button-up__part-2"></span>
+            </a>
+          </div>
           <div class="content-narrow">
             <div class="it__flex-column">
               <div class="it__link">https://www.bigdataschool.ru/blog/lean-costs-in-it.html</div>
