--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
               <div class="sales__body">
                 <h3 class="sales__title section-title">Lean в продажах</h3>
                 <p class="sales__text main-text">Внедрение бережливого производства приводит к достижению впечатляющих результатов в отношении основых показателей продаж. <strong>Благодаря внедрению системы LEAN вы сможете:</strong></p>
-                <ul class="sales__list">
+                <ul class="sales__list list-items">
                   <li class="sales__item">Сократить время закрытия сделки</li>
                   <li class="sales__item">Обслуживать больше клиентов за меньшее время</li>
                   <li class="sales__item">Устранить зависмоть от “звезд”</li>
@@ -84,7 +84,7 @@
                 <h3 class="finance__title section-title">Lean в финансах</h3>
                 <p class="finance__text main-text">В управлении финансами ситсема позволяет более точно оценить влияние Lean-трансформации на стратегические показатели компании через использование альтернативных методов управленческого учета.  </p>
                 <h4 class="finance__list-title">Lean учёт это:</h4>
-                <ul class="finance__list finance-list">
+                <ul class="finance__list list-items">
                   <li class="finance-list__item">Оценка результативности внедрения лин</li>
                   <li class="finance-list__item">Оценка внедряемых изменений</li>
                   <li class="finance-list__item">"Бережливый офис"</li>
@@ -121,7 +121,7 @@
                     <div class="it__text main-text">На пути к Индустрии 4.0 для компании важно чтобы внедрение изменений осуществлялось слаженно и системно, усилия координировались,<br> а результаты были и соответствовали ожиданиям. </div>
                     <div class="it__list list-it">
                       <h4 class="list-it__title">Почему Lean-трансформацию компании стоит начать с<br> ИТ-департамента?</h4>
-                      <ul class="list-it__list">
+                      <ul class="list-it__list list-items">
                         <li class="list-it__item">Цифровая трансформация бизнеса стала необходимым условием не только роста, но и выживания. </li>
                         <li class="list-it__item">Эффективная ИТ-инфраструктура позволяет аккумулировать данные из всех областей деятельности компании. А значит - принимать решения, основанные на данных. 
                         </li>
