frefactor: block start and main text

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
               <div class="finance__body">
                 <h3 class="finance__title section-title">Lean в финансах</h3>
                 <p class="finance__text main-text">В управлении финансами ситсема позволяет более точно оценить влияние Lean-трансформации на стратегические показатели компании через использование альтернативных методов управленческого учета.  </p>
-                <h4 class="finance__list-title">Lean учёт это:</h4>
+                <h4 class="finance__list-title list-title">Lean учёт это:</h4>
                 <ul class="finance__list list-items">
                   <li class="finance-list__item">Оценка результативности внедрения лин</li>
                   <li class="finance-list__item">Оценка внедряемых изменений</li>
@@ -120,7 +120,7 @@
                     <h3 class="it__title section-title">Lean в IT</h3>
                     <div class="it__text main-text">На пути к Индустрии 4.0 для компании важно чтобы внедрение изменений осуществлялось слаженно и системно, усилия координировались,<br> а результаты были и соответствовали ожиданиям. </div>
                     <div class="it__list list-it">
-                      <h4 class="list-it__title">Почему Lean-трансформацию компании стоит начать с<br> ИТ-департамента?</h4>
+                      <h4 class="list-it__title list-title">Почему Lean-трансформацию компании стоит начать с<br> ИТ-департамента?</h4>
                       <ul class="list-it__list list-items">
                         <li class="list-it__item">Цифровая трансформация бизнеса стала необходимым условием не только роста, но и выживания. </li>
                         <li class="list-it__item">Эффективная ИТ-инфраструктура позволяет аккумулировать данные из всех областей деятельности компании. А значит - принимать решения, основанные на данных. 
