feat: add arrow to finance section

--- a/src/index.html
+++ b/src/index.html
@@ -72,13 +72,13 @@
           </div>
         </section>
         <section class="finance">
+          <div class="finance-arrow">
+            <a class="finance-arrow__button button-up" href="">
+              <span class="button-up__part-1"></span>
+              <span class="button-up__part-2"></span>
+            </a>
+          </div>
           <div class="content-without-breakpoint">
-            <!-- <div class="finance-arrow">
-              <a class="finance-arrow__button button-up" href="">
-                <span class="button-up__part-1"></span>
-                <span class="button-up__part-2"></span>
-              </a>
-            </div> -->
             <div class="finance__flex">
               <div class="finance__body">
                 <h3 class="finance__title section-title">Lean в финансах</h3>
