--- a/src/index.html
+++ b/src/index.html
@@ -93,17 +93,17 @@
               <div class="finance__img"></div>
             </div>
           </div>
-        </section>
-        <aside class="discuss">
-          <div class="content-width">
-            <div class="discuss__flex">
-              <div class="discuss__text main-text">
-                Мы можем дать оценку ситуации именно по вашему случаю. Чтобы получить ответы на ваши вопросы переходите на страницу контактов (можно перейти нажав на конпку ниже) и свяжитесь с нами наиболее удобным для вас способом:
+          <aside class="discuss">
+            <div class="content-for-start">
+              <div class="discuss__flex">
+                <div class="discuss__text main-text">
+                  Мы можем дать оценку ситуации именно по вашему случаю. Чтобы получить ответы на ваши вопросы переходите на страницу контактов (можно перейти нажав на конпку ниже) и свяжитесь с нами наиболее удобным для вас способом:
+                </div>
+                <a href="" class="discuss__link button-yellow">Обсудить ваш вопрос</a>
               </div>
-              <a href="" class="discuss__link button-yellow">Обсудить ваш вопрос</a>
             </div>
-          </div>
-        </aside>
+          </aside>
+        </section>
         <section class="it">
           <div class="it-arrow">
             <a class="it-arrow__button button-up" href="">
@@ -111,44 +111,38 @@
               <span class="button-up__part-2"></span>
             </a>
           </div>
-          <div class="content-narrow">
+          <div class="content-without-breakpoint">
             <div class="it__flex-column">
               <div class="it__link">https://www.bigdataschool.ru/blog/lean-costs-in-it.html</div>
               <div class="it__flex">
                 <div class="it__body">
-                  <div class="it__body-flex">
-                    <h3 class="it__title section-title">Lean в IT</h3>
-                    <div class="it__text main-text">На пути к Индустрии 4.0 для компании важно чтобы внедрение изменений осуществлялось слаженно и системно, усилия координировались,<br> а результаты были и соответствовали ожиданиям. </div>
-                    <div class="it__list list-it">
-                      <h4 class="list-it__title list-title">Почему Lean-трансформацию компании стоит начать с<br> ИТ-департамента?</h4>
-                      <ul class="list-it__list list-items">
-                        <li class="list-it__item">Цифровая трансформация бизнеса стала необходимым условием не только роста, но и выживания. </li>
-                        <li class="list-it__item">Эффективная ИТ-инфраструктура позволяет аккумулировать данные из всех областей деятельности компании. А значит - принимать решения, основанные на данных. 
-                        </li>
-                        <li class="list-it__item">Бюджеты на ИТ-инфраструктуру растут из года в год, во многих компаниях (не связанных с ИТ-сервисами) превышая бюджеты на развитие инфраструктуры основного производства. 
-                        </li>
-                        <li class="list-it__item">ИТ-проекты становятся серьезным вызовом как для руководства, так и для исполнителей. И часто упираются в высокий уровень сопротивления изменениям</li>
-                        <li class="list-it__item">Качество функционирования ИТ-инфраструктуры теперь влияет на удовлетворенность не только внутренних, но и внешних потребителей. </li>
-                        <li class="list-it__item">Высокий процент изменений в компании требует быстрой адаптации ИТ-инфраструктуры. Гибкость и скорость адаптации часто становятся ключевыми факторами успешности внедряемых изменений. </li>
-                        <li class="list-it__item">Эффективность ИТ-инфраструктуры сложно измерить, а значит - сложно улучшать</li>
-                      </ul>
-                    </div>
+                  <h3 class="it__title section-title">Lean в IT</h3>
+                  <div class="it__text main-text">На пути к Индустрии 4.0 для компании важно чтобы внедрение изменений осуществлялось слаженно и системно, усилия координировались, а результаты были и соответствовали ожиданиям. </div>
+                  <div class="it__list list-it">
+                    <h4 class="list-it__title list-title">Почему Lean-трансформацию компании стоит начать с ИТ-департамента?</h4>
+                    <ul class="list-it__list list-items">
+                      <li class="list-it__item">Цифровая трансформация бизнеса стала необходимым условием не только роста, но и выживания. </li>
+                      <li class="list-it__item">Эффективная ИТ-инфраструктура позволяет аккумулировать данные из всех областей деятельности компании. А значит - принимать решения, основанные на данных. </li>
+                      <li class="list-it__item">Бюджеты на ИТ-инфраструктуру растут из года в год, во многих компаниях (не связанных с ИТ-сервисами) превышая бюджеты на развитие инфраструктуры основного производства. </li>
+                      <li class="list-it__item">ИТ-проекты становятся серьезным вызовом как для руководства, так и для исполнителей. И часто упираются в высокий уровень сопротивления изменениям</li>
+                      <li class="list-it__item">Качество функционирования ИТ-инфраструктуры теперь влияет на удовлетворенность не только внутренних, но и внешних потребителей. </li>
+                      <li class="list-it__item">Высокий процент изменений в компании требует быстрой адаптации ИТ-инфраструктуры. Гибкость и скорость адаптации часто становятся ключевыми факторами успешности внедряемых изменений. </li>
+                      <li class="list-it__item">Эффективность ИТ-инфраструктуры сложно измерить, а значит - сложно улучшать</li>
+                    </ul>
                   </div>
                 </div>
-                <div class="it__img-wrap">
-                  <img src="assets/img/lean_in_it.png" alt="" class="it__img">
-                </div>
+                <div class="it__img"></div>
               </div>
             </div>
           </div>
+          <div class="content-for-start">
+            @@include("components/_start.html")
+          </div>
+          <a class="it__button-up button-up" href="">
+            <span class="button-up__part-1"></span>
+            <span class="button-up__part-2"></span>
+          </a>
         </section>
-        <div class="content-for-start">
-          @@include("components/_start.html")
-        </div>
-        <a class="button-up" href="">
-          <span class="button-up__part-1"></span>
-          <span class="button-up__part-2"></span>
-        </a>
       </main>
     </div>
     @@include("components/_footer.html")
