feat: add html scroll smooth

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <div class="introduction__flex">
               <h2 class="introduction__title">Lean-трансформация <span>Вашего бизнеса.</span> Мы знаем как</h2>
               <p class="introduction__text">Узнайте как получить до 90% компенсации стоимости затрат на консалтинговый проект</p>
-              <a class="introduction__link button-yellow" href="small_business_consultation.html">Посмотреть условия</a>
+              <a class="introduction__link button-yellow" href="#">Посмотреть условия</a>
             </div>
           </div>
         </section>
@@ -73,7 +73,7 @@
         </section>
         <section class="finance">
           <div class="finance-arrow">
-            <a class="finance-arrow__button button-up" href="">
+            <a class="finance-arrow__button button-up" href="#">
               <span class="button-up__part-1"></span>
               <span class="button-up__part-2"></span>
             </a>
@@ -99,14 +99,14 @@
                 <div class="discuss__text main-text">
                   Мы можем дать оценку ситуации именно по вашему случаю. Чтобы получить ответы на ваши вопросы переходите на страницу контактов (можно перейти нажав на конпку ниже) и свяжитесь с нами наиболее удобным для вас способом:
                 </div>
-                <a href="" class="discuss__link button-yellow">Обсудить ваш вопрос</a>
+                <a href="#" class="discuss__link button-yellow">Обсудить ваш вопрос</a>
               </div>
             </div>
           </aside>
         </section>
         <section class="it">
           <div class="it-arrow">
-            <a class="it-arrow__button button-up" href="">
+            <a class="it-arrow__button button-up" href="#">
               <span class="button-up__part-1"></span>
               <span class="button-up__part-2"></span>
             </a>
@@ -138,7 +138,7 @@
           <div class="content-for-start">
             @@include("components/_start.html")
           </div>
-          <a class="it__button-up button-up" href="">
+          <a class="it__button-up button-up" href="#">
             <span class="button-up__part-1"></span>
             <span class="button-up__part-2"></span>
           </a>
