--- a/src/index.html
+++ b/src/index.html
@@ -25,20 +25,20 @@
             </div>
           </div>
         </section>
-        <section class="use">
+        <section class="use" id="use">
           <div class="content-narrow">
             <h3 class="use__title section-title">Где можно применить Lean</h3>
             <div class="use__body">
               <div class="use__flex">
-                <a href="#" class="use__item use-item">
+                <a href="#sales" class="use__item use-item">
                   <img class="use-item__img" src="assets/img/use.png" alt="" >
                   <span  class="use-item__text">Lean в продажах</span>
                 </a>
-                <a href="#" class="use__item use-item">
+                <a href="#finance" class="use__item use-item">
                   <img class="use-item__img" src="assets/img/use-1.png" alt="">
                   <span class="use-item__text">Lean в финансах</span>
                 </a>
-                <a href="#" class="use__item use-item">
+                <a href="#it" class="use__item use-item">
                   <img class="use-item__img" src="assets/img/use-2.png" alt="">
                   <span class="use-item__text">Lean в IT</span>
                 </a>
@@ -46,7 +46,7 @@
             </div>
           </div>
         </section>
-        <section class="sales">
+        <section class="sales" id="sales">
           <div class="sales-arrow"></div>
           <div class="content-without-breakpoint">
             <div class="sales__flex">
@@ -71,9 +71,9 @@
             @@include("components/_start.html")
           </div>
         </section>
-        <section class="finance">
+        <section class="finance" id="finance">
           <div class="finance-arrow">
-            <a class="finance-arrow__button button-up" href="#">
+            <a class="finance-arrow__button button-up" href="#use">
               <span class="button-up__part-1"></span>
               <span class="button-up__part-2"></span>
             </a>
@@ -104,9 +104,9 @@
             </div>
           </aside>
         </section>
-        <section class="it">
+        <section class="it" id="it">
           <div class="it-arrow">
-            <a class="it-arrow__button button-up" href="#">
+            <a class="it-arrow__button button-up" href="#use">
               <span class="button-up__part-1"></span>
               <span class="button-up__part-2"></span>
             </a>
@@ -138,7 +138,7 @@
           <div class="content-for-start">
             @@include("components/_start.html")
           </div>
-          <a class="it__button-up button-up" href="#">
+          <a class="it__button-up button-up" href="#use">
             <span class="button-up__part-1"></span>
             <span class="button-up__part-2"></span>
           </a>
